--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,6 +5,11 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <style>
+    html,
+    body {
+      font-family: sans-serif;
+    }
+
     .links line {
       stroke: #999;
       stroke-opacity: 0.6;
@@ -14,13 +19,32 @@
       stroke: #000;
       stroke-width: 1.5px;
     }
+
+    #info {
+      position: absolute;
+      visibility: hidden;
+      top: 0;
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+      width: 150px;
+      height: 70px;
+      background-color: rgba(30, 30, 30, 0.95);
+      border-radius: 5px;
+      padding: 10px;
+      color: white;
+      text-align: center;
+      line-height: 1.25;
+    }
   </style>
 </head>
 
 <body>
-  <svg width="960" height="600">
+  <svg width="100%" height="100%">
 
   </svg>
+
+  <div id="info">
+    Hello
+  </div>
 </body>
 
 </html>
