--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -10,9 +10,18 @@
       font-family: sans-serif;
     }
 
-    .links line {
-      stroke: #999;
-      stroke-opacity: 0.6;
+    .links {
+      stroke: #666;
+      stroke-opacity: 0.4;
+    }
+
+    .focus {
+      stroke: #000;
+      stroke-opacity: 1;
+    }
+
+    .suspect {
+      stroke: #f00;
     }
 
     .nodes circle {
