--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -8,6 +8,9 @@
     html,
     body {
       font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
 
     .links {
@@ -43,6 +46,30 @@
       text-align: center;
       line-height: 1.25;
     }
+
+    #details {
+      position: absolute;
+      height: 100%;
+      width: 250px;
+      top: 0;
+      right: -300;
+      padding: 20px;
+      padding-top: 40px;
+      background-color: #ddd;
+      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+      transition: right 0.5s;
+    }
+
+    #report {
+      position: absolute;
+      bottom: 60;
+      left: calc(50% - 123px);
+    }
+
+    button {
+      padding: 10px;
+      font-size: 1.2rem;
+    }
   </style>
 </head>
 
@@ -51,8 +78,26 @@
 
   </svg>
 
+  <div id="report">
+    <button>Generate intelligence report</button>
+  </div>
+
   <div id="info">
     Hello
+  </div>
+
+  <div id="details">
+    <div style="text-align: center">
+      <img id="details_img" src="7f1ece825dacf1d2834f6eb788bc1179.svg" width="100" height="100" />
+    </div>
+    <div id="details_name" style="text-align: center; padding-top:10px; font-size: 1.5rem">
+    </div>
+    <div id="details_text1" style="text-align: left; padding-top:20px; font-size: 1rem">
+    </div>
+    <div id="details_text2" style="text-align: left; padding-top:10px; font-size: 1rem">
+    </div>
+    <div id="details_text3" style="text-align: left; padding-top:10px; font-size: 1rem">
+    </div>
   </div>
 </body>
 
