--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -112,6 +112,24 @@
     #transactions {
       padding: 30px;
     }
+
+    button {
+      min-width: 200px;
+      background-color: #ccc;
+      color: black;
+      border: solid 2px #333;
+    }
+
+    button.active {
+      background-color: #efefef;
+      border-color: black;
+    }
+
+    button.inactive {
+
+      border-color: #666;
+      color: #333;
+    }
   </style>
 </head>
 
