Add account details when viewing transactions

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -178,7 +178,11 @@
       </div>
       <div id="details_text3" style="text-align: left; padding-top:10px; font-size: 1rem">
       </div>
-    </div>
+      <div id="details_text4" style="text-align: left; padding-top:10px; font-size: 1rem">
+      </div>
+      <div id="details_text5" style="text-align: left; padding-top:10px; font-size: 1rem">
+      </div>
+      </div>
   </div>
 </body>
 
